# feature-forge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: 01-getting-started.md  02-defining-features.md  03-retrieving-features.md  04-backends.md  05-engines.md  06-materialization.md  07-cli-reference.md
examples/databricks/: run.py
examples/databricks/feature_repo/: entities.yml  features.yml  sources.yml
examples/quickstart/: generate_data.py  run.py
examples/quickstart/feature_repo/: entities.yml  features.yml  sources.yml
examples/quickstart/feature_repo/data/: profiles.parquet  transactions.parquet
src/feature_forge/: __init__.py  __main__.py  exceptions.py  types.py
src/feature_forge/backends/: base.py  databricks.py  factory.py  parquet.py  s3.py  sql.py
src/feature_forge/cli/: app.py
src/feature_forge/engine/: pit_join.py  retrieval.py  spark_pit_join.py
src/feature_forge/engines/: base.py  duckdb_engine.py  factory.py  spark_engine.py
src/feature_forge/registry/: loader.py  models.py  validator.py
src/feature_forge/sdk/: store.py
tests/: conftest.py
tests/fixtures/invalid_repo/: bad_features.yml
tests/fixtures/valid_repo/: entities.yml  features.yml  sources.yml
tests/test_backends/: test_databricks.py  test_parquet.py  test_s3.py  test_sql.py
tests/test_cli/: test_app.py
tests/test_engine/: test_pit_join.py  test_spark_pit_join.py
tests/test_registry/: test_loader.py  test_models.py  test_validator.py
tests/test_sdk/: test_store.py
