[project]
name = "feature-forge"
version = "0.1.0"
description = "Lightweight feature store for small and medium teams"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Pedro Fabris" },
]
requires-python = ">=3.10"
keywords = ["feature-store", "ml", "machine-learning", "duckdb", "features"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "duckdb>=1.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
spark = ["pyspark>=3.5"]
databricks = ["databricks-sql-connector>=3.0"]
all = ["feature-forge[spark,databricks]"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
feature-forge = "feature_forge.cli.app:app"

[project.urls]
Homepage = "https://github.com/pydoni/feature-forge"
Repository = "https://github.com/pydoni/feature-forge"
Issues = "https://github.com/pydoni/feature-forge/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/feature_forge"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "spark: requires PySpark",
    "databricks: requires Databricks connector",
]
